--- a/Auditorias Conector/Auditorias Conector.csproj
+++ b/Auditorias Conector/Auditorias Conector.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Serilog" Version="2.0.0" />
+    <PackageReference Include="Serilog.Enrichers.Thread" Version="2.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="2.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
   </ItemGroup>
